--- a/src/views/blocks/banner1.pug
+++ b/src/views/blocks/banner1.pug
@@ -1,7 +1,9 @@
-.banner.image.image_cover 
-  img(src="./img/Banners_3 1.png", alt="image")
-  .banner__content 
-    h6.banner__title Только опт от <strong>30 000 ₽</strong><br>
-      | Хотите купить небольшой объем?
-    a(href="#").button.button_style-1.banner__button
-      span Вам сюда 
+.banner   
+  .image.image_cover
+    img(src="./img/Banners_optovikam_1200x120 1.jpg", alt="bg").lazyload
+  .banner__text 
+    h6.banner__title Вы оптовый покупатель и вас интересует большой объем?
+    p Здесь вы можете приобрести сырье и готовую продукцию 
+  .banner__button 
+    a(href="https://ruslanmmr.github.io/Semushka_opt/build/").button.button_style-1 
+      span Подробнее
