--- a/src/styles/components/_blocks.scss
+++ b/src/styles/components/_blocks.scss
@@ -657,101 +657,71 @@
 }
 
 .parallax-product-slider {
-  &__container {
-    position: relative;
-    padding: 80px 0;
+  position: relative;
+  .swiper-container {
+    overflow: visible;
   }
-  &__background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    .image {
-      background-color: transparent;
-      position: absolute;
-      width: 110%;
-      height: 100%;
-    }
-  }
-  &__wrapper {
-    display: flex;
-  }
-  &__inner {
-    position: relative;
-    flex-shrink: 0;
-
-  }
-  &__line {
-    width: 2750px;
-    height: auto;
-    position: absolute;
-    top: -40px;
-    left: -350px;
-  }
-  &__elements {
-    padding-left: 102px;
-    flex-shrink: 0;
-    display: grid;
-    grid-template-columns: repeat(6, 240px);
-    column-gap: 60px;
+  .swiper-wrapper {
     align-items: flex-start;
   }
-  &__block {
-    &:nth-child(even) {
+  .swiper-slide {
+    width: 240px;
+    box-sizing: content-box;
+    &:not(:last-child) {
+      padding-right: 60px;
+    }
+    &:nth-child(odd) {
       margin-top: 60px;
     }
+  }
+  &__line {
+    position: absolute;
+    width: 2750px;
+    height: auto;
+    top: -30px;
+    left: -460px;
+  }
+  &__background {
+    background-color: transparent;
+    position: absolute;
+    width: 110%;
+    height: calc(100% + 150px);
+    top: -70px;
+    left: 0;
   }
 }
 
 .banner {
-  padding: 30px 0;
+  display: flex;
+  align-items: center;
+  padding: 35px 85px 35px 60px;
   border-radius: 4px;
   overflow: hidden;
-  &::after {
-    content: '';
-    display: block;
+  position: relative;
+  color: #fff;
+  font-size: 1.125rem;
+  .image {
+    background-color: #EF8200;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
   }
-  &__content {
-    position: relative;
-    z-index: 3;
-    padding: 0 40px 0 440px;
-    color: #fff;
-  }
   &__title {
-    line-height: 1.5;
-    margin-bottom: 20px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+  &__text {
+    flex: 1 1 auto;
+    position: relative;
+    z-index: 2;
+    padding-right: 40px;
   }
   &__button {
-    min-width: 170px;
-  }
-  @include media-breakpoint-down(xl) {
-    &__content {
-      padding: 0 20px 0 340px;
-    }
-  }
-  @include media-breakpoint-down(lg) {
-    &__content {
-      padding: 0 20px 0 300px;
-    }
-  }
-  @include media-breakpoint-down(md) {
-    &__content {
-      padding: 0 20px 0 200px;
-    }
-  }
-  @include media-breakpoint-down(sm) {
-    &::after {
-      background: rgba(0, 0, 0, 0.2);
-    }
-    &__content {
-      padding: 0 40px;
-    }
+    flex: 0 0 auto;
+    position: relative;
+    z-index: 2;
   }
 }
 
