--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -24,4 +24,8 @@
 
   //modal
   --color-modal-overlay: rgba(43, 41, 41, 0.6);
+
+  //scrollbar
+  --color-scrollbar-track: #F1F1F1;
+  --color-scrollbar-thumb: #C1C1C1;
 }
