--- a/src/views/produkcziya.pug
+++ b/src/views/produkcziya.pug
@@ -21,20 +21,29 @@ block content
       .products-section__content
         a(href="#").product-category-block
           .image.image_contain
-            img(data-src="./img/Nuts 1.png", alt="image").lazyload
+            img(data-src="./img/categories/1.png", alt="image").lazyload
           h6.product-category-block__title Орехи
         a(href="#").product-category-block
           .image.image_contain
-            img(data-src="./img/Semena 1.png", alt="image").lazyload
-          h6.product-category-block__title Семена
-        a(href="#").product-category-block
-          .image.image_contain
-            img(data-src="./img/Suxofruct 1.png", alt="image").lazyload
+            img(data-src="./img/categories/2.png", alt="image").lazyload
           h6.product-category-block__title Сухофрукты
         a(href="#").product-category-block
           .image.image_contain
-            //img(data-src="/", alt="image").lazyload
-          h6.product-category-block__title Фасовка
+            img(data-src="./img/categories/3.png", alt="image").lazyload
+          h6.product-category-block__title Смеси
+        a(href="#").product-category-block
+          .image.image_contain
+            img(data-src="./img/categories/4.png", alt="image").lazyload
+          h6.product-category-block__title Семечки
+        a(href="#").product-category-block
+          .image.image_contain
+            img(data-src="./img/categories/5.png", alt="image").lazyload
+          h6.product-category-block__title Сладости
+        a(href="#").product-category-block
+          .image.image_contain
+            img(data-src="./img/categories/6.png", alt="image").lazyload
+          h6.product-category-block__title Наборы
       
-      .section__banner
-        include blocks/banner1    
+  section.section
+    .container
+      include blocks/banner1
