--- a/src/styles/components/_basic.scss
+++ b/src/styles/components/_basic.scss
@@ -1,5 +1,14 @@
 body {
   min-width: 320px;
+  &::-webkit-scrollbar {
+    width: 8px
+  }
+  &::-webkit-scrollbar-track {
+    background-color: var(--color-scrollbar-track);
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-scrollbar-thumb);
+  }
 }
 * {
   box-sizing: border-box;
