--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -5,97 +5,97 @@
   &__container {
     display: grid;
     column-gap: var(--grid-gutter-x);
-    row-gap: 50px;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 1fr auto;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(4, auto);
+  }
+  &__box-1 {
+    grid-column: 1/4;
+    grid-row: 1/3;
+  }
+  &__nav {
+    grid-column: 4/6;
+    grid-row: 1/5;
   }
   &__logo {
-    width: 120px;
-    margin-bottom: 37px;
-  }
-  &__phone {
-    font-weight: 700;
-    margin-bottom: 10px;
-  }
-  &__adress {
-    font-size: 0.875rem;
+    width: 148px;
   }
   &__socials {
-    margin-top: 40px;
+    margin-top: 34px;
   }
-  &__last {
-    margin-top: 40px;
-    font-size: 0.875rem;
-    a {
-      white-space: nowrap;
+  &__info {
+    grid-column: span 2;
+    &-title {
+      font-size: 1rem;
+      font-weight: 700;
+      margin-bottom: 12px;
+      color: var(--color-accent-2);
     }
   }
-  &__copyright {
-    display: block;
-    white-space: nowrap;
-    margin-top: 30px;
-  }
-  &__nav-list-item {
+  &__info-item {
     &:not(:last-child) {
       margin-bottom: 12px;
     }
   }
-  &__nav-list-link {
-    font-weight: 700;
+  &__adress {
+    grid-column: 6/9;
+    grid-row: 1/5;
   }
-  &__product-nav-title {
+  &__phones {
+    grid-row: 1/5;
+  }
+  &__box-2 {
+    grid-column: 1/4;
+    grid-row: 3/5;
+    margin-top: 25px;
+    align-self: flex-end;
+  }
+  &__box-3 {
+    grid-column: 11/13;
+    grid-row: 2/5;
+    margin-top: 25px;
+    align-self: flex-end;
+  }
+  &__copyright {
+    font-size: 0.875rem;
     display: block;
-    margin-bottom: 12px;
-    color: var(--color-accent-2);
+    margin-top: 18px;
+    color: var(--color-muted);
   }
-  &__product-nav-item {
-    &:not(:last-child) {
-      margin-bottom: 8px;
-    }
-  }
-  &__product-nav-link {
+  &__politics {
     font-size: 0.875rem;
   }
-  @include media-breakpoint-up(xl) {
-    &__box-1 {
-      grid-column: 1/2;
-      grid-row: 1/2;
-    }
-    &__product-nav {
-      grid-row: 1/3;
-    }
-    &__nav-list {
-      grid-row: 1/3;
+}
+
+.footer-nav {
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 12px;
     }
   }
-  @include media-breakpoint-down(xl) {
-    &__container {
-      grid-template-columns: repeat(4, 1fr);
-    }
-    &__nav-list {
-      grid-column: 2/5;
-    }
-    &__last {
-      margin: 0;
-    }
-    &__copyright {
-      margin-top: 20px;
+  &__link {
+    font-weight: 700;
+    color: var(--color-accent-2);
+    transition: color $trs1;
+    &[data-touch], &[data-hover] {
+      color: var(--color-accent-2_2);
     }
   }
-  @include media-breakpoint-down(lg) {
-    &__box-1 {
-      grid-column: 1/3;
-    }
-    &__nav-list {
-      grid-column: 3/5;
+}
+
+.footer-lang {
+  display: flex;
+  &__item {
+    &:not(:last-child) {
+      margin-right: 28px;
     }
   }
-  @include media-breakpoint-down(sm) {
-    &__container {
-      row-gap: 40px;
-    }
-    &__product-nav {
-      grid-column: span 2;
+  &__link {
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    color: var(--color-muted);
+    &.is-active {
+      color: var(--color-accent-2);
+      pointer-events: none;
     }
   }
 }
