--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -121,6 +121,11 @@ strong, b {
   font-weight: 700;
 }
 
+mark {
+  background-color: transparent;
+  color: var(--color-accent-2);
+}
+
 ul:not([class]), ol:not([class]) {
   &:not(:last-child) {
     margin-bottom: 1.75rem;
@@ -158,7 +163,7 @@ ol:not([class]) {
   counter-reset: section;
   padding-left: 40px;
   li:not([class]) {
-    padding-left: calc(1rem + 8px);
+    padding-left: 2em;
     position: relative;
     &:before {
       counter-increment: section;
@@ -166,6 +171,7 @@ ol:not([class]) {
       position: absolute;
       left: 0;
       top: 0;
+      color: var(--color-accent-2);
     }
   }
   @include media-breakpoint-down(sm) {
