--- a/src/views/blocks/components.pug
+++ b/src/views/blocks/components.pug
@@ -2,7 +2,7 @@ mixin product-card(type)
   -let index = Math.round(Math.random() * 1000000)
   .product-card(data-custom-interaction)
     .product-card__image
-      a(href="./product1.html").image.image_contain 
+      a(href="./product.html").image.image_contain 
         if type == 1
           img(data-src="./img/product-1.png", alt="image").lazyload
         else if type == 2
@@ -19,8 +19,6 @@ mixin product-card(type)
           .product-label.product-label_type-4 Хит продаж
           .product-label.product-label_type-3 Скидка
           
-        
-
     .product-card__content 
       .product-card__top
         .product-card__label-info 
@@ -33,7 +31,7 @@ mixin product-card(type)
           else if type == 2
             | Грецкие сушенные орехи 
           else if type == 3
-            | Грецкий орех в скорлупе 
+            | Грецкий орех в скорлупе (Товар в корзине)
 
       .product-card__bottom
         .product-card__packaging
@@ -59,6 +57,32 @@ mixin product-card(type)
             label.packaging-list__item
               input(type="radio" name=index value='150')
               span(data-custom-interaction) 150
+
+        .product-card__last 
+          .product-card__pricing 
+            .product-card__old-price
+              .product-card__old-price-element
+                if type == 3
+                  | 240 
+                  span ₽
+            .product-card__price 
+              if type == 1
+                | 120 
+              else if type == 2
+                | 163 
+              else if type == 3
+                | 200 
+              span ₽
+
+          .buy-box.buy-box_small.product-card__buy-box(class=type==3 ? 'is-active' : '')
+            .buy-box__button
+              button.button.button_style-1.button_small 
+                span Купить 
+            .buy-box__calculator
+              .count-calculator(data-custom-interaction) 
+                button.count-calculator__button.count-calculator__button_minus 
+                input(type="number" value= type==3 ? '2' : '1').count-calculator__input
+                button.count-calculator__button.count-calculator__button_plus 
 
 mixin certificate(image) 
   .certificate-block(data-custom-interaction)
@@ -109,4 +133,51 @@ mixin pagination()
         a(href="#").pagination__link
           svg.icon
             use(xlink:href='./img/icons/sprite.svg#right-arrow')
+
+mixin recipe-block(type)
+  a(href="#").recipe-block
+    .recipe-block__mask
+    .recipe-block__image
+      .image.image_cover
+        if type==1
+          img(data-src="./img/recipe1.jpg", alt="image").lazyload
+        else 
+          img(data-src="./img/recipe2.jpg", alt="image").lazyload
+    .recipe-block__text 
+      .recipe-block__title 
+        if type==2 
+          | Карамелизованная морковь с кешью кремом
+        else 
+          | Салат с киноа, авокадо и шампиньонами
+      .recipe-info 
+        .recipe-info__item 
+          svg.icon(viewBox="0 0 21 21")
+            use(xlink:href='./img/icons/sprite.svg#wall-clock')
+          | 1 час
+        .recipe-info__item 
+          svg.icon(viewBox="0 0 29 20")
+            use(xlink:href='./img/icons/sprite.svg#dish')
+          | 320 ккал
+
+
+mixin recipe-day()
+  a(href="#").recipe-day
+    .recipe-day__text-content 
+      h6.recipe-day__title Рецепт дня
+      p.recipe-day__text Яблочный кекс с вяленой клюквой и штрейзелем
+    .recipe-day__bottom 
+      .recipe-info.recipe-day__info 
+        .recipe-info__item 
+          svg.icon(viewBox="0 0 21 21")
+            use(xlink:href='./img/icons/sprite.svg#wall-clock')
+          | 1 час
+        .recipe-info__item 
+          svg.icon(viewBox="0 0 29 20")
+            use(xlink:href='./img/icons/sprite.svg#dish')
+          | 320 ккал
       
+      .recipe-day__images 
+        .recipe-day__dish.image.image_cover
+          img(data-src="./img/Rectangle 311.jpg", alt="image").lazyload
+        .recipe-day__product.image.image_contain
+          img(data-src="./img/categories/1.png", alt="image").lazyload
