--- a/src/views/blocks/footer.pug
+++ b/src/views/blocks/footer.pug
@@ -3,9 +3,6 @@ footer.footer
     .footer__box-1
       a(href="./").logo.footer__logo
         img(src="./img/logos/logo.svg", alt="logo")
-      .footer__phone
-        a(href="tel:74991103044").link +7 (499) 110 30 44
-      .footer__adress 129012, Москва, 2-я Ямская, д. 9, этаж З, комната 22. 
       .socials.footer__socials
         ul.socials__list 
           li.socials__item 
@@ -23,112 +20,50 @@ footer.footer
               svg.icon(viewBox="0 0 30 21")
                 use(xlink:href='./img/icons/sprite.svg#youtube') 
               | youtube
-    ul.footer__nav-list 
-      li.footer__nav-list-item
-        a(href="./produkcziya.html").footer__nav-list-link.link Продукция
-      li.footer__nav-list-item
-        a(href="./novosti.html").footer__nav-list-link.link Новости
-      li.footer__nav-list-item
-        a(href="./kontakty.html").footer__nav-list-link.link Контакты
-      li.footer__nav-list-item
-        a(href="./o-kompanii.html").footer__nav-list-link.link О компании
-      li.footer__nav-list-item
-        a(href="#").footer__nav-list-link.link Как сделать заказ?
-    .footer__product-nav
-      strong.footer__product-nav-title Орехи
-      ul.footer__product-nav-list
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Арахис
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Бразильский орех
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Грецкий орех
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Кедровый орех
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Кешью
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Кокос
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Макадамия
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Миндаль
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Орехи карамелизированные
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Пекан
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Смесь ореховая
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Фисташки
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Фундук
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Ядро абрикосовой косточки
-    .footer__product-nav
-      strong.footer__product-nav-title Семена
-      ul.footer__product-nav-list
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Амарант
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Киноа
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Кунжут
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Лен
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Мак
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Подсолнечник
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Тыква
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Чиа
-    .footer__product-nav
-      strong.footer__product-nav-title Сухофрукты
-      ul.footer__product-nav-list
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Армянские
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Изюм
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Инжир
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Курага
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Пасты
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Тропические
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Финики
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Цукаты
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Чернослив
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Шиповник
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Яблоко
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Ягоды
-    .footer__product-nav
-      strong.footer__product-nav-title Фасовка
-      ul.footer__product-nav-list
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Орехи
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Семена
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Сухофрукты
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Чурчхела и лаваш
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Шоколад и мармелад
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Цукаты
-        li.footer__product-nav-item
-          a(href="#").footer__product-nav-link.link Подарочные наборы
+    .footer__nav
+      nav.footer-nav        
+        ul.footer-nav__list
+          li.footer-nav__item
+            a(href="./produkcziya.html").footer-nav__link Продукция
+          li.footer-nav__item
+            a(href="./novosti.html").footer-nav__link Новости
+          li.footer-nav__item
+            a(href="./o-kompanii.html").footer-nav__link О компании
+          li.footer-nav__item
+            a(href="./kontakty.html").footer-nav__link Контакты
+          li.footer-nav__item
+            a(href="#").footer-nav__link Оптовикам
     
-    .footer__last
-      a(href="#").link-dashed Политика конфиденциальности 
-      span.footer__copyright Все права защищены © 
+    .footer__info.footer__adress
+      h6.footer__info-title Адрес 
+      .footer__info-content 
+        span 2-я Ямская ул., 9, Москва, 127018
+
+
+    .footer__info.footer__phones
+      h6.footer__info-title Телефоны 
+      ul.footer__info-list 
+        li.footer__info-item 
+          a(href="tel:74954887285") +7 (495) 488 72 85
+        li.footer__info-item 
+          a(href="tel:74954887284") +7 (495) 488 72 84
+        li.footer__info-item 
+          a(href="tel:74956026424") +7 (495) 602 64 24
+
+    .footer__info
+      h6.footer__info-title Почта 
+      ul.footer__info-list 
+        li.footer__info-item 
+          a(href="mailto:info@semushka-m.ru") info@semushka-m.ru
+
+    .footer__box-2 
+      a(href="#").footer__politics.link-dashed Политика конфиденциальности 
+
+    .footer__box-3 
+      ul.footer-lang 
+        li.footer-lang__item 
+          a(href="#").footer-lang__link.link EN 
+        li.footer-lang__item 
+          a(href="#").footer-lang__link.link.is-active RU 
+          
+      span.footer__copyright все права защищены © 
