--- a/src/views/blocks/helper.pug
+++ b/src/views/blocks/helper.pug
@@ -22,6 +22,16 @@ link(rel="stylesheet" href="./styles/helper.css")
       span.helper__section-title Страницы:
       .helper__section-content
         a(href="index.html").helper__section-button Главная
+        a(href="produkcziya.html").helper__section-button Продукция
+        a(href="katalog.html").helper__section-button Каталог
+        a(href="product.html").helper__section-button Продукт
+        a(href="novosti.html").helper__section-button Новости
+        a(href="novost.html").helper__section-button Новость
+        a(href="blog.html").helper__section-button Блог
+        a(href="article.html").helper__section-button Рецепт
+        a(href="o-kompanii.html").helper__section-button О Компании
+        a(href="kontakty.html").helper__section-button Контакты
+
         a(href="404.html").helper__section-button 404
         a(href="template.html").helper__section-button Шаблон
         
