--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -41,40 +41,7 @@ block content
           img(src="./img/icons/selection.svg", alt="icon").icon
           p Широкий<br> ассортимент
 
-  section.section.product-slider
-    .container 
-      .section__head.product-slider__head 
-        h3.section__title Товары по акции
-      .swiper
-        .swiper-button.swiper-button-prev(data-custom-interaction)
-          svg.icon
-            use(xlink:href='./img/icons/sprite.svg#right-arrow')
-        .swiper-button.swiper-button-next(data-custom-interaction)
-          svg.icon
-            use(xlink:href='./img/icons/sprite.svg#right-arrow')
-        .swiper-container
-          .swiper-wrapper
-            .swiper-slide
-              +product-card(1)
-            .swiper-slide
-              +product-card(2)
-            .swiper-slide
-              +product-card(3)
-            .swiper-slide
-              +product-card(2)
-            .swiper-slide
-              +product-card(1)
-            .swiper-slide
-              +product-card(1)
-            .swiper-slide
-              +product-card(1)
-            .swiper-slide
-              +product-card(2)
-            .swiper-slide
-              +product-card(1)
-            .swiper-slide
-              +product-card(2)
-        .swiper-pagination    
+  include blocks/product-slider
 
   section.section.parallax-product-slider.swiper
     .parallax-product-slider__background.image.image_cover
@@ -122,7 +89,6 @@ block content
                 img(data-src="./img/categories/6.png", alt="image").lazyload
               h6.product-category-block__title Наборы
   
-  
   section.section
     .container
       include blocks/banner1
@@ -143,8 +109,6 @@ block content
           a(href="./o-kompanii.html").button.button_style-1 
             span Подробнее
 
-        
-
   section.section.certificates-section
     .container 
       .section__head
@@ -156,7 +120,7 @@ block content
         +certificate('./img/certificates/4.jpg')
         +certificate('./img/certificates/5.jpg')
 
-  section.section.news-grid
+  section.section
     .container 
       .section__head.section__head_with-button
         h3.section__title.section__title_with-button Новости
@@ -164,22 +128,15 @@ block content
           span Смотреть все
           svg.icon
             use(xlink:href='./img/icons/sprite.svg#right-arrow')
-      .news-grid__container 
+      .news-grid
         +news-element('./img/News_pic_588x266 1.jpg', 'Экскурсия в магазин «Семушка»<br> на Мясницкой', 2)
         +news-element('./img/Mask Group.jpg', 'Открытие магазина «Семушка» в Москве')
         +news-element('./img/News_pic_282x266_2 1.jpg', 'Открытие сайта для оптовых покупателей')
         +news-element('./img/News_pic_282x266_3 1.jpg', 'Увеличение цены на чернослив и курагу')
         +news-element('./img/News_pic_282x266_4 1.jpg', 'Компания «Семушка» прошла сертификацию FSSC 22000 ')
         +news-element('./img/News_pic_588x266_1 1.jpg', 'Логистический кризис: цены на контейнерные перевозки резко увеличились', 2)
-      
-      //.news-grid__contacts-widget
-        .contacts-widget
-          .contacts-widget__section
-            .contacts-widget__text-1 Не нашли что искали?
-            .contacts-widget__text-2 Свяжитесь с нами
-          .contacts-widget__section
-            .contacts-widget__text-3 Горячая линия
-            a(href="tel:74991103044").contacts-widget__phone.link +7 (499) 110 30 44
-          .contacts-widget__section
-            a(href="#obratnyj-zvonok" data-modal='open').button.button_style-1
-              span Заказать звонок 
+  
+  include blocks/recipes-slider
+
+  -var map_type = 1;
+  include blocks/map
