--- a/src/views/blocks/footer.pug
+++ b/src/views/blocks/footer.pug
@@ -50,7 +50,7 @@ footer.footer
         li.footer__info-item 
           a(href="tel:74956026424") +7 (495) 602 64 24
 
-    .footer__info
+    .footer__info.footer__info-email
       h6.footer__info-title Почта 
       ul.footer__info-list 
         li.footer__info-item 
