--- a/src/views/blocks/header.pug
+++ b/src/views/blocks/header.pug
@@ -14,7 +14,7 @@ header.header(data-scroll-lock-fill-gap)
                 use(xlink:href='./img/icons/sprite.svg#shopping-bag')
               | Каталог
           li.header-nav__item 
-            a(href="./o-kompanii.html").header-nav__link.link Блог
+            a(href="./blog.html").header-nav__link.link Блог
           li.header-nav__item 
             a(href="./novosti.html").header-nav__link.link Новости
     
@@ -74,7 +74,7 @@ nav.mobile-navigation
         li.mobile-nav-list__item  
           a(href="./katalog.html").mobile-nav-list__link.link Каталог
         li.mobile-nav-list__item 
-          a(href="./o-kompanii.html").mobile-nav-list__link.link Блог
+          a(href="./blog.html").mobile-nav-list__link.link Блог
         li.mobile-nav-list__item 
           a(href="./novosti.html").mobile-nav-list__link.link Новости
 
