--- a/src/views/blocks/recipes-slider.pug
+++ b/src/views/blocks/recipes-slider.pug
@@ -9,7 +9,7 @@ section.section.items-slider.recipes-slider
       .swiper-button.swiper-button-next(data-custom-interaction)
         svg.icon
           use(xlink:href='./img/icons/sprite.svg#right-arrow')
-      .swiper-container(data-xl-slides='3')
+      .swiper-container(data-md-slides='2' data-lg-slides='3')
         .swiper-wrapper
           .swiper-slide
             +recipe-day()
