--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -88,7 +88,11 @@ block content
               .image.image_contain
                 img(data-src="./img/categories/6.png", alt="image").lazyload
               h6.product-category-block__title Наборы
-  
+
+      .swiper-pagination 
+
+
+      
   section.section
     .container
       include blocks/banner1
