--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -10,11 +10,9 @@
   }
   &__box-1 {
     grid-column: 1/4;
-    grid-row: 1/3;
   }
   &__nav {
     grid-column: 4/6;
-    grid-row: 1/5;
   }
   &__logo {
     width: 148px;
@@ -38,20 +36,12 @@
   }
   &__adress {
     grid-column: 6/9;
-    grid-row: 1/5;
-  }
-  &__phones {
-    grid-row: 1/5;
   }
   &__box-2 {
-    grid-column: 1/4;
-    grid-row: 3/5;
     margin-top: 25px;
     align-self: flex-end;
   }
   &__box-3 {
-    grid-column: 11/13;
-    grid-row: 2/5;
     margin-top: 25px;
     align-self: flex-end;
   }
@@ -63,6 +53,87 @@
   }
   &__politics {
     font-size: 0.875rem;
+  }
+  @include media-breakpoint-up(xl) {
+    &__box-1 {
+      grid-row: 1/3;
+    }
+    &__nav {
+      grid-row: 1/5;
+    }
+    &__adress {
+      grid-row: 1/5;
+    }
+    &__phones {
+      grid-row: 1/5;
+    }
+    &__box-2 {
+      grid-column: 1/4;
+      grid-row: 3/5;
+    }
+    &__box-3 {
+      grid-column: 11/13;
+      grid-row: 2/5;
+    }
+  }
+  @include media-breakpoint-down(xl) {
+    &__container {
+      grid-template-rows: auto;
+      row-gap: 50px;
+    }
+    &__nav {
+      grid-column: 4/7;
+    }
+    &__info {
+      grid-column: span 3;
+    }
+    &__box-2 {
+      grid-column: span 6;
+      margin-top: 0;
+    }
+    &__box-3 {
+      grid-column: span 3;
+      margin-top: 0;
+    }
+  }
+  @include media-breakpoint-between(md, xl) {
+    &__info-email {
+      order: 6;
+    }
+    &__box-2 {
+      order: 3;
+    }
+    &__box-3 {
+      order: 4;
+    }
+  }
+  @include media-breakpoint-down(md) {
+    &__info {
+      grid-column: span 4;
+    }
+    &__nav {
+      grid-column: span 6;
+    }
+    &__box-1 {
+      grid-column: span 6;
+    }
+    &__box-2 {
+      grid-column: span 12;
+    }
+    &__box-3 {
+      grid-column: span 12;
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    &__container {
+      row-gap: 40px;
+    }
+    &__logo {
+      width: 120px;
+    }
+    &__info {
+      grid-column: span 6;
+    }
   }
 }
 
