--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -28,4 +28,9 @@
   //scrollbar
   --color-scrollbar-track: #F1F1F1;
   --color-scrollbar-thumb: #C1C1C1;
+
+  //slider pagination
+  --color-dark-pagination: rgba(0, 0, 0, 0.2);
+  --color-dark-pagination-hover: rgba(0, 0, 0, 0.4);
+  --color-dark-pagination-active: #2B2929;
 }
